filters when clicking labels, checkboxes get checked

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -90,7 +90,7 @@
 
           <!-- Human Interaction Filter -->
           <div class="filter-dropdown">
-            <button class="filter-btn" data-filter="human">Human I ▼</button>
+            <button class="filter-btn" data-filter="human">Human Interaction ▼</button>
             <div class="dropdown-content" data-category="human">
               <label class="checkbox-item">
                 <input type="checkbox" data-behavior="approaches" data-column="Approaches">
