added squirrel icons and removed the question mark

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -123,10 +123,7 @@
                 <input type="checkbox" data-behavior="unknown" data-column="Age" data-value="Unknown">
                 <span>Unknown</span>
               </label>
-              <label class="checkbox-item">
-                <input type="checkbox" data-behavior="question" data-column="Age" data-value="?">
-                <span>?</span>
-              </label>
+              
             </div>
           </div>
         </div>
@@ -143,13 +140,13 @@
           <span class="label">Squirrel Color</span>
           <div class="color-options">
             <div class="color-option" data-color="gray">
-              <div class="squirrel-icon gray-squirrel"></div>
+              <img src="../images/grey-squirrel.png" alt="Gray squirrel" class="squirrel-icon">
             </div>
             <div class="color-option" data-color="cinnamon">
-              <div class="squirrel-icon cinnamon-squirrel"></div>
+              <img src="../images/cinnamon-squirrel.png" alt="Cinnamon squirrel" class="squirrel-icon">
             </div>
             <div class="color-option" data-color="black">
-              <div class="squirrel-icon black-squirrel"></div>
+              <img src="../images/black-squirrel.png" alt="Black squirrel" class="squirrel-icon">
             </div>
           </div>
         </div>
