implemented reset filters button

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -127,6 +127,10 @@
             </div>
           </div>
         </div>
+
+        <div class="reset-filters">
+          <button id="reset-filters-btn" title="Reset All Filters">Reset Filters</button>
+        </div>
         
         <div class="dog-filter">
           <span class="label">Dog Activity</span>
