x-axis on butterfly charts and default on percentage

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -169,7 +169,7 @@
           <div class="butterfly-section">
             <div style="position: relative; display: flex; justify-content: flex-end; align-items: center;">
               <!-- Title Container -->
-              <h3 class="butterfly-title">Squirrel Activity by Fur Color and Time of Day</h3>
+              <h3 class="butterfly-title">Squirrel Activity by Fur Color & Time of Day</h3>
 
               <!-- Toggle -->
               <div class="toggle-container">
