--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -10,6 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
     <!-- MapLibre GL JS -->
     <script src="https://unpkg.com/maplibre-gl@latest/dist/maplibre-gl.js"></script>
+    <script src="./d3.v7.min.js"></script>
     <script src="./idioms/filters.js"></script>
     <script src="./idioms/linechart.js"></script>
     <script src="./idioms/butterflyChart.js"></script>
