--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -6,6 +6,7 @@
     <title>Central Park Squirrel Activity Dashboard</title>
     <link rel="stylesheet" href="style.css" />
     <script src="./d3.v7.min.js"></script>
+    <script src="./selection.js"></script>
     <script src="./idioms/filters.js"></script>
     <script src="./idioms/linechart.js"></script>
     <script src="./idioms/butterflyChart.js"></script>
