linechart zoom, some styling tweaks

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -16,6 +16,11 @@
   <body>
     <div class="dashboard-container">
       <div class="title-section">
+        <p class="title-edition">
+          Central Park, NYC<br>
+          October 24, 2025
+        </p>
+
         <h1>The Squirrel Times</h1>
       </div>
       
@@ -172,7 +177,7 @@
           </div>
           
           <div class="linechart-section">
-            <h3>Squirrel Activity Across Temperature</h3>
+            <h3 class="linechart-title">Squirrel Activity Across Temperature</h3>
             <div class="LineChart"></div>
           </div>
         </div>
